gcc/testsuite/rust/rustc/ui/issues/issue-23217.rs
pub enum SomeEnum {
    B = SomeEnum::A, // { dg-error ".E0599." "" { target *-*-* } }
}

fn main() {}

